--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LA page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -47,7 +47,7 @@
     <div class="textBlock">
         <div class="linha"></div>
         <p class="text">
-            Para a garota mais incrível do mundo, que possui olhos que brilham, um sorriso perfeito e um lindo cabelo. Amo cada detalhe em você, e sou muito feliz por ter você em minha vida.
+            Para a garota mais incrível do mundo, que possui olhos que brilham, um sorriso perfeito e um lindo cabelo. Amo cada detalhe em você e sou muito feliz por ter você em minha vida.
             <br>
             Eu te amo ❤️
         </p>
